# rpinters

./: meson.build
data/: meson.build  piprint.desktop.in  piprint.ui  rpinters.desktop.in  rpinters.ui
debian/: changelog  control  copyright
po/: POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  (+67 more)
src/: cc-permission-infobar.ui  cc-printers-panel.c  cc-printers-panel.h  common.gresource.xml  config.h  meson.build  new-printer-dialog.ui  piprint.c  pp-details-dialog.c  pp-details-dialog.ui  pp-host.c  pp-jobs-dialog.c  pp-jobs-dialog.ui  pp-new-printer-dialog.c  pp-options-dialog.c  pp-options-dialog.ui  pp-ppd-selection-dialog.c  pp-printer-entry.c  pp-printer.c  pp-samba.c  pp-utils.c  pp-utils.h  printer-entry.ui  printers.ui  rpinters.c
